Get rid of federation